First 5 sections are completed responsively

--- a/index.html
+++ b/index.html
@@ -23,11 +23,26 @@
       <nav class="flex items-center justify-between gap-[10px] text-[1rem]">
         <a href="#"><img class="h-[35px]" src="Images/saytaz.svg" alt="Logo"></a>
         <div class="navLinks hidden gap-[56px] lg:flex">
-          <a href="#">Veb sayt<i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i></a>
-          <a href="#">Domen<i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i></a>
-          <a href="#">Hostinq<i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i></a>
-          <a href="#">Xidmətlər<i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i></a>
-          <a href="#">Şirkət<i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i></a>
+          <a class="hover:text-[#752EE2]" href="#">
+            Veb sayt
+            <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+          </a>
+          <a class="hover:text-[#752EE2]" href="#">
+            Domen
+            <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+          </a>
+          <a class="hover:text-[#752EE2]" href="#">
+            Hostinq
+            <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+          </a>
+          <a class="hover:text-[#752EE2]" href="#">
+            Xidmətlər
+            <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+          </a>
+          <a class="hover:text-[#752EE2]" href="#">
+            Şirkət
+            <i class="fa-solid fa-chevron-down text-[13px] ml-[10px]"></i>
+          </a>
         </div>
         <div class="navRightPart w-fit flex items-center justify-between gap-[25px]">
           <div class="currencyAndCountry flex items-center gap-[15px]">
@@ -203,7 +218,8 @@
           </p>
         </div>
         <div class="flex ">
-          <input class="pl-[20px] lg:w-[420px] ms:w-[85%] w-[150px] px-[5px] ms:px-[20px] py-[8px] ms:py-[12px] outline-none"
+          <input
+            class="pl-[20px] lg:w-[420px] ms:w-[85%] w-[150px] px-[5px] ms:px-[20px] py-[8px] ms:py-[12px] outline-none"
             type="text" placeholder="İstədiyiniz domen adını daxil edin">
           <select class="text-[#300B60] px-[5px] ms:px-[20px] py-[8px] ms:py-[12px] outline-none">
             <option class="text-[#300B60]" selected>.net.az</option>
@@ -238,7 +254,7 @@
       </div>
     </div>
     <!-- SECTION 4 -->
-    <div class="section4 w-[1300px] flex flex-col gap-[48px] mx-auto py-[60px] px-[50px]">
+    <div class="section4 w-[88.3%] sm:w-[85.4%] flex flex-col gap-[48px] mx-auto py-[60px] px-[35px]">
       <div class="section4Header flex gap-[60px] flex-wrap">
         <div class="left flex flex-col gap-[24px]">
           <h3 class="text-[42px] font-bold">Hostinq Planınızı Seçin</h3>
@@ -253,11 +269,12 @@
           </div>
         </div>
       </div>
-      <div class="cardsDiv py-[20px] flex flex-wrap items-center w-full justify-between ">
+      <div class="cardsDiv py-[20px] flex flex-wrap items-center w-full gap-[30px] lg:gap-0 
+      justify-center lg:justify-between">
         <div
-          class="card w-[390px] cursor-pointer border hover:border-[#845CC5] border-[3px] rounded-[10px] px-[17px] py-[17px] bg-[#FAFBFF] border-r-0">
-          <p class="text-[36px] font-bold">₼60<span class="text-[14px] font-[400]"> /il</span></p>
-          <ul class="px-[12px] py-[15px] bg-white rounded-[15px]">
+          class="left card w-[95%] sm:w-[80%] md:w-[45%] lg:w-[32%] min-w-[275px] cursor-pointer border hover:border-[#845CC5] border-[3px] rounded-[10px] px-[15px] py-[17px] bg-[#FAFBFF]">
+          <p class="text-[36px] p-[10px] py-[5px] font-bold">₼60<span class="text-[14px] font-[400]"> /il</span></p>
+          <ul class="p-[12px] bg-white rounded-[15px]">
             <h4 class="text-[24px] font-[680] pb-[15px]">Ekonomik</h4>
             <li><i class="fa-solid fa-check"></i><b>1</b> Domen</li>
             <li><i class="fa-solid fa-check"></i><b>3 GB</b> Disk Həcmi</li>
@@ -276,12 +293,12 @@
             et</button>
         </div>
         <div
-          class="card relative w-[420px] cursor-pointer border hover:border-[#845CC5] border-[3px] rounded-[10px] px-[17px] py-[20px] bg-[#FAFBFF]">
+          class="card2 relative min-w-[280.5px] w-[95%] sm:w-[80%] md:w-[45%] lg:w-[34%] cursor-pointer border border-[#845CC5] border-[3px] rounded-[10px] px-[15px] py-[17px] bg-[#FAFBFF] shadow-[2px_12px_30px_rgba(132,92,197,0.8)]">
           <span
-            class="absolute right-[20px] rounded-[10px] top-[20px] text-[14px] font-bold bg-white py-[5px] px-[10px] text-[#845CC5]">ƏN
+            class="absolute right-[20px] rounded-[10px] top-[20px] text-[12px] font-bold bg-white py-[5px] px-[10px] text-[#845CC5]">ƏN
             POPULYAR</span>
-          <p class="text-[36px] font-bold">₼120<span class="text-[14px] font-[400]"> /il</span></p>
-          <ul class="px-[12px] py-[15px] bg-white rounded-[15px]">
+          <p class="text-[36px]  p-[10px] py-[5px] font-bold">₼120<span class="text-[14px] font-[400]"> /il</span></p>
+          <ul class="p-[12px] bg-white rounded-[15px]">
             <h4 class="text-[24px] font-[680] pb-[17px]">Standart</h4>
             <li class="boyuk"><i class="fa-solid fa-check"></i><b>2</b> Domen</li>
             <li class="boyuk"><i class="fa-solid fa-check"></i><b>8 GB</b> Disk Həcmi</li>
@@ -300,9 +317,9 @@
             et</button>
         </div>
         <div
-          class="card w-[390px] border-l-0 cursor-pointer border hover:border-[#845CC5] border-[3px] rounded-[10px] px-[17px] py-[17px] bg-[#FAFBFF]">
-          <p class="text-[36px] font-bold">₼240<span class="text-[14px] font-[400]"> /il</span></p>
-          <ul class="px-[12px] py-[15px] bg-white rounded-[15px]">
+          class="right card w-[95%] sm:w-[80%] md:w-[45%] lg:w-[32%] min-w-[275px] cursor-pointer border hover:border-[#845CC5] border-[3px] rounded-[10px] px-[15px] py-[17px] bg-[#FAFBFF]">
+          <p class="text-[36px] p-[10px] py-[5px] font-bold">₼240<span class="text-[14px] font-[400]"> /il</span></p>
+          <ul class="p-[12px] bg-white rounded-[15px]">
             <h4 class="text-[24px] font-[680] pb-[15px]">Professional</h4>
             <li><i class="fa-solid fa-check"></i><b>5</b> Domen</li>
             <li><i class="fa-solid fa-check"></i><b>14 GB</b> Disk Həcmi</li>
@@ -319,6 +336,62 @@
           <button
             class="text-center w-[100%] rounded-[25px] text-[#845CC5] border border-[#845CC5] py-[10px]  mt-[15px] hover:bg-[#845CC5] hover:text-white">Sifariş
             et</button>
+        </div>
+      </div>
+    </div>
+    <!-- SECTION 5 -->
+    <div class="section5 flex w-[95%] xl:w-[1300px] gap-[70px] mx-auto flex-col py-[65px]">
+      <div class=" flex px-[40px] gap-[20px] md:gap-[0] flex-wrap md:flex-nowrap justtify-between header">
+        <div>
+          <h3 class="text-[42px] font-bold">Startuplar</h3>
+          <p class="text-[20px]">Mütəxəssis məsləhətlərimizlə biznesinizi necə inkişaf etdirəcəyinizi öyrənin.</p>
+        </div>
+        <div class="flex justify-start md:justify-end w-[43%]">
+          <button
+            class="py-[10px] text-[14px] font-[650] px-[24px] border h-fit text-white rounded-[10px] hover:bg-[#752EE2] bg-[#9F6FEE] min-w-[181px]">Bütün
+            StartUplar <i class="fa-solid fa-angles-right"></i></button>
+        </div>
+      </div>
+      <div
+        class="cards flex flex-wrap gap-[13px] md:gap-[10px] lg:gap-[3px] justify-center lg:justify-between w-full px-[35px]">
+        <div
+          class="card border border-[#E5E7EB] bg-[#FAF4FF] min-w-[260px] w-[85%] sm:w-[40%] lg:w-[31.55%] p-[24px] rounded-[20px] flex items-center flex-col gap-y-[24px]">
+          <img class="rounded-[15px] h-[220px] w-[335px] object-cover" src="Images\paracoin.png" alt="paracoinImg">
+          <div class="content flex flex-col items-start gap-y-[10px] pl-[10px]">
+            <a class="text-[24px] font-[620]" href="#">paracoin.network</a>
+            <p class="w-fit text-[1rem]">Para göndər & qəbul et, NFT Al & Sat, Ağıllı müqavilələr hazırla, Birja,
+              Ödənişlər</p>
+            <button
+              class="mt-[10px] hover:bg-[#752EE2] bg-[#9F6FEE] rounded-[20px] text-white py-[6px] px-[15px] text-[1rem]">
+              Ətraflı oxu...
+            </button>
+          </div>
+        </div>
+        <div
+          class="card border border-[#E5E7EB] bg-[#FAF4FF] min-w-[260px] w-[85%] sm:w-[40%] lg:w-[31.55%] p-[24px] rounded-[20px] flex items-center flex-col gap-y-[24px]">
+          <img class="rounded-[15px] h-[220px] w-[335px] object-cover" src="Images\kredit.png" alt="paracoinImg">
+          <div class="content flex flex-col items-start gap-y-[10px] pl-[10px]">
+            <a class="text-[24px] font-[620]" href="#">paracoin.network</a>
+            <p class="w-fit text-[1rem]">Para göndər & qəbul et, NFT Al & Sat, Ağıllı müqavilələr hazırla, Birja,
+              Ödənişlər</p>
+            <button
+              class="mt-[10px] hover:bg-[#752EE2] bg-[#9F6FEE] rounded-[20px] text-white py-[6px] px-[15px] text-[1rem]">
+              Ətraflı oxu...
+            </button>
+          </div>
+        </div>
+        <div
+          class="card border border-[#E5E7EB] bg-[#FAF4FF] min-w-[260px] w-[85%] sm:w-[40%] lg:w-[31.55%] p-[24px] rounded-[20px] flex items-center flex-col gap-y-[24px]">
+          <img class="rounded-[15px] h-[220px] w-[335px] object-cover" src="Images\sayti.jpg" alt="paracoinImg">
+          <div class="content flex flex-col items-start gap-y-[10px] pl-[10px]">
+            <a class="text-[24px] font-[620]" href="#">paracoin.network</a>
+            <p class="w-fit text-[1rem]">Para göndər & qəbul et, NFT Al & Sat, Ağıllı müqavilələr hazırla, Birja,
+              Ödənişlər</p>
+            <button
+              class="mt-[10px] hover:bg-[#752EE2] bg-[#9F6FEE] rounded-[20px] text-white py-[6px] px-[15px] text-[1rem]">
+              Ətraflı oxu...
+            </button>
+          </div>
         </div>
       </div>
     </div>
