--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <header>
-    <div class="all-navbar py-[24px] px-[28px] font-[650] fixed w-[100%] top-0 left-0 z-20 bg-white">
+    <div class="all-navbar py-[10px] md:py-[24px] px-[28px] font-[650] fixed w-[100%] top-0 left-0 z-20 bg-white">
       <nav class="flex items-center justify-between gap-[10px] text-[1rem]">
         <a href="#"><img class="h-[35px]" src="Images/saytaz.svg" alt="Logo"></a>
         <div class="navLinks hidden gap-[56px] lg:flex">
@@ -71,7 +71,7 @@
       </nav>
     </div>
     <div class="headerMain h-[100vh] flex items-center justify-center gap-[30px] flex-col">
-      <h1 class="xl:w-[900px] w-[80%] text-[3rem] text-[#334155] font-[650] text-center">
+      <h1 class="xl:w-[900px] mt-[60px] w-[95%] text-[2rem] md:text-[3rem] text-[#334155] font-[650] text-center">
         Biznesinizi bizimlə rəqəmsal dünyada
         <span class="relative inline-block text-blue-600">
           daha asan
@@ -79,7 +79,7 @@
         </span>
         yoldan irəliyə apar!
       </h1>
-      <p class="text-[20px] text-slate-500 xl:w-[660px] w-[65%] text-center">
+      <p class="text-[20px] text-slate-500 xl:w-[660px] w-[85%] text-center">
         Mütəxəssislərdən ibarət komandamız sizə müştəri dəstəyi və texniki yardım göstərmək üçün 24/7 hazırdır.
       </p>
       <a class="text-blue-600 font-[600] py-[18px] px-[28px] rounded-[10px] border-[3px] border-[#A271F2]" href="#">
@@ -90,11 +90,12 @@
 
   <main>
     <!-- SECTION 2 -->
-    <div class="section2 max-w-[1300px] flex gap-y-[30px] flex-wrap items-center my-[80px] mx-auto px-[20px]">
+    <div
+      class="section2 max-w-[1300px] flex gap-y-[30px] flex-wrap items-center py-[15px] md:py-[80px] mx-auto md:px-[20px] px-[5px]">
       <div class="w-[90%] lg:w-[50%]  min-w-[250px] sm:min-w-[492px] mx-auto">
         <div class="w-[100%] flex justify-between sm:flex-row flex-col gap-[10px] items-center">
           <div
-            class=" w-[31.5%] min-w-[181px] p-[25px] flex flex-col items-center gap-[25px] shadow-[0px_3px_8px_rgba(0,0,0,0.3)] rounded-lg">
+            class=" md:w-[31.5%] w-[75%] min-w-[181px] p-[25px] flex flex-col items-center gap-[25px] shadow-[0px_3px_8px_rgba(0,0,0,0.3)] rounded-lg">
             <span>Tamamlandı</span>
             <svg width="100" height="100">
               <g transform="rotate(-90 50 50)">
@@ -109,7 +110,7 @@
             <h3 class="text-[14px] text-gray-400">Designer</h3>
           </div>
           <div
-            class=" w-[31.5%] p-[25px] min-w-[181px] flex items-center flex-col gap-[25px] shadow-[0px_3px_8px_rgba(0,0,0,0.3)] rounded-lg">
+            class=" md:w-[31.5%] w-[75%] p-[25px] min-w-[181px] flex items-center flex-col gap-[25px] shadow-[0px_3px_8px_rgba(0,0,0,0.3)] rounded-lg">
             <span>Icradadır</span>
             <svg width="100" height="100">
               <g transform="rotate(-90 50 50)">
@@ -125,7 +126,7 @@
             <h3 class="text-[14px] text-gray-400">Frontend Developer</h3>
           </div>
           <div
-            class=" w-[31.5%] min-w-[181px] p-[25px] flex flex-col items-center gap-[25px] shadow-[0px_3px_8px_rgba(0,0,0,0.3)] rounded-lg">
+            class=" md:w-[31.5%] w-[75%] min-w-[181px] p-[25px] flex flex-col items-center gap-[25px] shadow-[0px_3px_8px_rgba(0,0,0,0.3)] rounded-lg">
             <span>Icradadır</span>
             <svg width="100" height="100">
               <g transform="rotate(-90 50 50)">
@@ -197,8 +198,8 @@
       </div>
     </div>
     <!-- SECTION 3 -->
-    <div class="section3 bg-[#FAF4FF] py-[120px]">
-      <div class="lg:w-[750px] w-[60%] mx-auto flex gap-[3rem] flex-col items-center">
+    <div class="section3 bg-[#FAF4FF] py-[20px] md:py-[120px]">
+      <div class="lg:w-[750px] w-[75%] mx-auto flex gap-[3rem] flex-col items-center">
         <div class=" flex flex-col gap-[10px]">
           <h2 class="text-[#300B60] text-[2rem] w-[310px] mx-auto text-center font-[600]">Domen Adını Axtarın</h2>
           <p class="text-[#300B60] text-[1rem] text-center">
@@ -208,7 +209,7 @@
             </span>
             saytında yoxlayın
           </p>
-          <p class="text-[#300B60] text-[1rem] text-center mx-auto w-[100%] lg:w-[600px]">
+          <p class="text-[#300B60] text-[1rem] text-center mx-auto w-[90%] lg:w-[600px]">
             Sayt.az-da .az domenləri yalnız aktiv hosting
             planı olan müştərilər üçün əlçatandır. Davam etməzdən əvvəl
             bizdən hosting aldığınıza əmin olun.
@@ -254,10 +255,11 @@
       </div>
     </div>
     <!-- SECTION 4 -->
-    <div class="section4 w-[88.3%] sm:w-[85.4%] flex flex-col gap-[48px] mx-auto py-[60px] px-[35px]">
-      <div class="section4Header flex gap-[60px] flex-wrap">
+    <div
+      class="section4 w-[88.3%] sm:w-[85.4%] flex flex-col gap-[15px] md:gap-[48px] mx-auto py-[15px] md:py-[60px] md:px-[35px] px-[5px]">
+      <div class="section4Header flex gap-[10px] md:gap-[60px] flex-wrap">
         <div class="left flex flex-col gap-[24px]">
-          <h3 class="text-[42px] font-bold">Hostinq Planınızı Seçin</h3>
+          <h3 class="text-[28px] md:text-[42px] font-bold">Hostinq Planınızı Seçin</h3>
           <p class="text-[20px] font-[490]">Yaxşı Bir Başlanğıc Təhlükəsiz və Güclü Hostinq Tələb Edir</p>
         </div>
         <div class="right flex items-end">
@@ -340,8 +342,8 @@
       </div>
     </div>
     <!-- SECTION 5 -->
-    <div class="section5 flex w-[95%] xl:w-[1300px] gap-[70px] mx-auto flex-col py-[65px]">
-      <div class=" flex px-[40px] gap-[20px] md:gap-[0] flex-wrap md:flex-nowrap justtify-between header">
+    <div class="section5 flex w-[95%] xl:w-[1300px] gap-[20px] md:gap-[70px] mx-auto flex-col py-[15px] md:py-[65px]">
+      <div class=" flex md:px-[40px] px-[10px] gap-[20px] md:gap-[0] flex-wrap md:flex-nowrap justtify-between header">
         <div>
           <h3 class="text-[42px] font-bold">Startuplar</h3>
           <p class="text-[20px]">Mütəxəssis məsləhətlərimizlə biznesinizi necə inkişaf etdirəcəyinizi öyrənin.</p>
@@ -355,7 +357,7 @@
       <div
         class="cards flex flex-wrap gap-[13px] md:gap-[10px] lg:gap-[3px] justify-center lg:justify-between w-full px-[35px]">
         <div
-          class="card border border-[#E5E7EB] bg-[#FAF4FF] min-w-[260px] w-[85%] sm:w-[40%] lg:w-[31.55%] p-[24px] rounded-[20px] flex items-center flex-col gap-y-[24px]">
+          class="card border border-[#E5E7EB] bg-[#FAF4FF] min-w-[260px] w-[95%] sm:w-[40%] lg:w-[31.55%] p-[24px] rounded-[20px] flex items-center flex-col gap-y-[24px]">
           <img class="rounded-[15px] h-[220px] w-[335px] object-cover" src="Images\paracoin.png" alt="paracoinImg">
           <div class="content flex flex-col items-start gap-y-[10px] pl-[10px]">
             <a class="text-[24px] font-[620]" href="#">paracoin.network</a>
@@ -368,7 +370,7 @@
           </div>
         </div>
         <div
-          class="card border border-[#E5E7EB] bg-[#FAF4FF] min-w-[260px] w-[85%] sm:w-[40%] lg:w-[31.55%] p-[24px] rounded-[20px] flex items-center flex-col gap-y-[24px]">
+          class="card border border-[#E5E7EB] bg-[#FAF4FF] min-w-[260px] w-[95%] sm:w-[40%] lg:w-[31.55%] p-[24px] rounded-[20px] flex items-center flex-col gap-y-[24px]">
           <img class="rounded-[15px] h-[220px] w-[335px] object-cover" src="Images\kredit.png" alt="paracoinImg">
           <div class="content flex flex-col items-start gap-y-[10px] pl-[10px]">
             <a class="text-[24px] font-[620]" href="#">paracoin.network</a>
@@ -381,7 +383,7 @@
           </div>
         </div>
         <div
-          class="card border border-[#E5E7EB] bg-[#FAF4FF] min-w-[260px] w-[85%] sm:w-[40%] lg:w-[31.55%] p-[24px] rounded-[20px] flex items-center flex-col gap-y-[24px]">
+          class="card border border-[#E5E7EB] bg-[#FAF4FF] min-w-[260px] w-[95%] sm:w-[40%] lg:w-[31.55%] p-[24px] rounded-[20px] flex items-center flex-col gap-y-[24px]">
           <img class="rounded-[15px] h-[220px] w-[335px] object-cover" src="Images\sayti.jpg" alt="paracoinImg">
           <div class="content flex flex-col items-start gap-y-[10px] pl-[10px]">
             <a class="text-[24px] font-[620]" href="#">paracoin.network</a>
