Section 6 is added and made reponsive

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </nav>
       </div>
       <div class="w-[90%] lg:w-[50%] min-w-[250px] sm:min-w-[492px] mx-auto">
-        <div class="w-[67%] m-auto flex flex-col justify-between gap-[50px]">
+        <div class="w-[88%] md:w-[67%] m-auto flex flex-col justify-between gap-[50px]">
           <h2 class="text-center text-[25px] font-bold w-[205px] mx-auto">Vebsayt sifarişinizi izləyin</h2>
           <div class="flex flex-col gap-4">
             <input class="text-center outline-none border border-black h-[52px] rounded-[10px] placeholder-[#676767]"
@@ -394,6 +394,31 @@
               Ətraflı oxu...
             </button>
           </div>
+        </div>
+      </div>
+    </div>
+    <!-- SECTION 6 -->
+    <div class="section6 relative flex py-[40px] lg:py-[0] bg-[#A271F2] flex-col h-fit font-[500] items-center">
+      <div class="w-full h-fit lg:h-[280px] flex  flex-col justify-center items-center">
+        <h3 class="w-fit text-[2rem] text-white">Statistikalarımız</h3>
+      </div>
+      <div
+        class="dbm lg:absolute lg:shadow-[0_2px_5px_2px_rgba(0,0,0,0.15)] lg:z-[15] lg:translate-y-1/2 lg:bottom-[0] flex flex-col lg:flex-row justify-around items-center lg:bg-white w-[350px] lg:w-[70%] mx-auto py-[28px] px-[40px] gap-[20px] lg:gap-[0]">
+        <div class="flex bg-white w-full lg:w-fit py-[25px] lg:p-[0] rounded-[8px] flex-col items-center gap-[8px]">
+          <span class="text-[24px] font-[750]">20+ il</span>
+          <h4 class="text-[14px]">Biz Təcrübəmizə Güvənirik</h4>
+        </div>
+        <div class="flex bg-white w-full lg:w-fit py-[25px] lg:p-[0] rounded-[8px] flex-col items-center gap-[8px]">
+          <span class="text-[24px] font-[750]">1000+</span>
+          <h4 class="text-[14px]">Məmnun Müştərilər</h4>
+        </div>
+        <div class="flex bg-white w-full lg:w-fit py-[25px] lg:p-[0] rounded-[8px] flex-col items-center gap-[8px]">
+          <span class="text-[24px] font-[750]">200+</span>
+          <h4 class="text-[14px]">Tamamlanan Layihələr</h4>
+        </div>
+        <div class="flex bg-white w-full lg:w-fit py-[25px] lg:p-[0] rounded-[8px] flex-col items-center gap-[8px]">
+          <span class="text-[24px] font-[750]">25+</span>
+          <h4 class="text-[14px]">Peşəkarlar Komandası</h4>
         </div>
       </div>
     </div>
