--- a/testing.html
+++ b/testing.html
@@ -18,90 +18,8 @@
 </head>
 
 <body>
-  <div class="section4 w-[88.3%] sm:w-[85.4%] flex flex-col gap-[48px] mx-auto py-[60px] px-[35px]">
-    <div class="section4Header flex gap-[60px] flex-wrap">
-      <div class="left flex flex-col gap-[24px]">
-        <h3 class="text-[42px] font-bold">Hostinq Planınızı Seçin</h3>
-        <p class="text-[20px] font-[490]">Yaxşı Bir Başlanğıc Təhlükəsiz və Güclü Hostinq Tələb Edir</p>
-      </div>
-      <div class="right flex items-end">
-        <div class="border rounded-[25px]">
-          <button class="rounded-[25px] text-[1rem] py-[15px] px-[40px] hover:bg-violet-400"
-            id="ayliqBtn">Aylıq</button>
-          <button class="rounded-[25px] text-[1rem] py-[15px] px-[40px] hover:bg-violet-400"
-            id="illikBtn">İllik</button>
-        </div>
-      </div>
-    </div>
-    <div class="cardsDiv py-[20px] flex flex-wrap items-center w-full gap-[30px] lg:gap-0 
-    justify-center lg:justify-between">
-      <div
-        class="left card w-[95%] sm:w-[80%] md:w-[45%] lg:w-[32%] min-w-[275px] cursor-pointer border hover:border-[#845CC5] border-[3px] rounded-[10px] px-[15px] py-[17px] bg-[#FAFBFF]">
-        <p class="text-[36px] p-[10px] py-[5px] font-bold">₼60<span class="text-[14px] font-[400]"> /il</span></p>
-        <ul class="p-[12px] bg-white rounded-[15px]">
-          <h4 class="text-[24px] font-[680] pb-[15px]">Ekonomik</h4>
-          <li><i class="fa-solid fa-check"></i><b>1</b> Domen</li>
-          <li><i class="fa-solid fa-check"></i><b>3 GB</b> Disk Həcmi</li>
-          <li><i class="fa-solid fa-check"></i><b>3</b> E-mail Hesabı</li>
-          <li><i class="fa-solid fa-check"></i>Premium müştəri dəstəyi</li>
-          <li><i class="fa-solid fa-check"></i>SSL Təhlükəsizliyi</li>
-          <li><i class="fa-solid fa-check"></i>Yedəkləmə və bərpa</li>
-          <li><i class="fa-solid fa-check"></i><b>Limitsiz</b> Trafik</li>
-          <li><i class="fa-solid fa-check"></i>Təhlükəsizlik Xüsusiyyətləri</li>
-          <li><i class="fa-solid fa-check"></i>cPanel</li>
-          <li><i class="fa-solid fa-check"></i>FTP Girişi</li>
-          <li><i class="fa-solid fa-check"></i>Fayl İdarəedici</li>
-        </ul>
-        <button
-          class="text-center w-[100%] rounded-[25px] text-[#845CC5] border border-[#845CC5] py-[10px]  mt-[15px] hover:bg-[#845CC5] hover:text-white">Sifariş
-          et</button>
-      </div>
-      <div
-        class="card2 relative min-w-[280.5px] w-[95%] sm:w-[80%] md:w-[45%] lg:w-[34%] cursor-pointer border border-[#845CC5] border-[3px] rounded-[10px] px-[15px] py-[17px] bg-[#FAFBFF] shadow-[2px_12px_30px_rgba(132,92,197,0.8)]">
-        <span
-          class="absolute right-[20px] rounded-[10px] top-[20px] text-[12px] font-bold bg-white py-[5px] px-[10px] text-[#845CC5]">ƏN
-          POPULYAR</span>
-        <p class="text-[36px]  p-[10px] py-[5px] font-bold">₼120<span class="text-[14px] font-[400]"> /il</span></p>
-        <ul class="p-[12px] bg-white rounded-[15px]">
-          <h4 class="text-[24px] font-[680] pb-[17px]">Standart</h4>
-          <li class="boyuk"><i class="fa-solid fa-check"></i><b>2</b> Domen</li>
-          <li class="boyuk"><i class="fa-solid fa-check"></i><b>8 GB</b> Disk Həcmi</li>
-          <li class="boyuk"><i class="fa-solid fa-check"></i><b>5</b> E-mail Hesabı</li>
-          <li class="boyuk"><i class="fa-solid fa-check"></i>Premium müştəri dəstəyi</li>
-          <li class="boyuk"><i class="fa-solid fa-check"></i>SSL Təhlükəsizliyi</li>
-          <li class="boyuk"><i class="fa-solid fa-check"></i>Yedəkləmə və bərpa</li>
-          <li class="boyuk"><i class="fa-solid fa-check"></i><b>Limitsiz</b> Trafik</li>
-          <li class="boyuk"><i class="fa-solid fa-check"></i>Təhlükəsizlik Xüsusiyyətləri</li>
-          <li class="boyuk"><i class="fa-solid fa-check"></i>cPanel</li>
-          <li class="boyuk"><i class="fa-solid fa-check"></i>FTP Girişi</li>
-          <li class="boyuk"><i class="fa-solid fa-check"></i>Fayl İdarəedici</li>
-        </ul>
-        <button
-          class="text-center w-[100%] rounded-[25px] text-[#845CC5] border border-[#845CC5] py-[10px]  mt-[15px] hover:bg-[#845CC5] hover:text-white">Sifariş
-          et</button>
-      </div>
-      <div
-        class="right card w-[95%] sm:w-[80%] md:w-[45%] lg:w-[32%] min-w-[275px] cursor-pointer border hover:border-[#845CC5] border-[3px] rounded-[10px] px-[15px] py-[17px] bg-[#FAFBFF]">
-        <p class="text-[36px] p-[10px] py-[5px] font-bold">₼240<span class="text-[14px] font-[400]"> /il</span></p>
-        <ul class="p-[12px] bg-white rounded-[15px]">
-          <h4 class="text-[24px] font-[680] pb-[15px]">Professional</h4>
-          <li><i class="fa-solid fa-check"></i><b>5</b> Domen</li>
-          <li><i class="fa-solid fa-check"></i><b>14 GB</b> Disk Həcmi</li>
-          <li><i class="fa-solid fa-check"></i><b>Limitsiz</b> E-mail Hesabı</li>
-          <li><i class="fa-solid fa-check"></i>Premium müştəri dəstəyi</li>
-          <li><i class="fa-solid fa-check"></i>SSL Təhlükəsizliyi</li>
-          <li><i class="fa-solid fa-check"></i>Yedəkləmə və bərpa</li>
-          <li><i class="fa-solid fa-check"></i><b>Limitsiz</b> Trafik</li>
-          <li><i class="fa-solid fa-check"></i>Təhlükəsizlik Xüsusiyyətləri</li>
-          <li><i class="fa-solid fa-check"></i>cPanel</li>
-          <li><i class="fa-solid fa-check"></i>FTP Girişi</li>
-          <li><i class="fa-solid fa-check"></i>Fayl İdarəedici</li>
-        </ul>
-        <button
-          class="text-center w-[100%] rounded-[25px] text-[#845CC5] border border-[#845CC5] py-[10px]  mt-[15px] hover:bg-[#845CC5] hover:text-white">Sifariş
-          et</button>
-      </div>
-    </div>
+  <div class="section7">
+    
   </div>
 </body>
 
